Move styles to a external file

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,16 +3,12 @@
   <head>
     <title>{{title}}</title>
     <link rel="stylesheet" type="text/css" href="/semantic/semantic.min.css">
-    <style type="text/css">
-    .container {
-      padding-top: 15px;
-    }
-    </style>
+    <link rel="stylesheet" href="/public/css/style.css">
   </head>
   <body>
     {{{body}}}
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="/semantic/semantic.min.js"></script>
-    <script type="text/javascript" src="/public/javascripts/main.js"></script>
+    <script type="text/javascript" src="/public/js/main.js"></script>
   </body>
 </html>
