--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="/public/css/style.css">
   </head>
   <body>
-    {{{body}}}
+    {{>navbar}}
+    <div class="init">
+      <div class="ui container" id="container-center">
+        {{{body}}}
+       </div>
+    </div>
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="/semantic/semantic.min.js"></script>
     <script type="text/javascript" src="/public/js/main.js"></script>
