--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,27 @@
-<h1>{{title}}</h1> 
+<div class="section title">
+    <h1>TODOS</h1>
+</div>
+<div class="todos ui segment">
+    <div class="ui relaxed aligned divided list">
+        <div class="item">
+          <img class="ui avatar image" src="/public/images/ninja-simple.png">
+          <div class="middle aligned content">
+            <div class="header">Snickerdoodle</div>
+            Lena
+          </div>
+          <div class="right floated content">
+            <div class="ui button green">Add</div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="ui avatar image" src="/public/images/ninja-simple.png">
+          <div class="middle aligned content">
+            <div class="header">Snickerdoodle</div>
+            Lena
+          </div>
+          <div class="right floated content">
+            <div class="ui button green">Add</div>
+          </div>
+    </div>
+    </div>
+</div>
