--- a/views/index.jade
+++ b/views/index.jade
@@ -1,52 +1,56 @@
 extends ./layouts/layout
 
 block content
-  #app
-    .ui.piled.segment
-      .ui.container
-        h4.ui.header Nueva Tarea
-        form.ui.form
-          .fields
-            .eight.wide.field
-              label= 'Nombre'
-              input(type='text', placeholder='Ingrese la nueva Tarea', v-model='todo.title')
-            .three.wide.field
-              label= 'Estado'
-              input(type='checkbox', style='display: none;', v-model='todo.state')
-              a.ui.red.large.tag.label= 'Pendiente'
-            .four.wide.field.container-flex-center
-              input.ui.big.button.item-flex-center(type='button', value='Nuevo', v-on:click='newTodo(todo)')
-              input.ui.big.button.blue.item-flex-center(type='button', value='Guardar', v-on:click='saveTodo(todo)')
-          .field
-            label= 'Descripcion'
-            textarea(v-model='todo.description')
+    div#app
+        .ui.piled.segment
+            .ui.container
+                h4.ui.header Nueva Tarea
+                form.ui.form
+                    .fields
+                        .eight.wide.field
+                            label= 'Nombre'
+                            input(type='text', placeholder='Ingrese la nueva Tarea', v-model='todo.title')
+                        .three.wide.field
+                            label= 'Estado'
+                            input(type='checkbox', style='display: none;', v-model='todo.state')
+                            .ui.left.pointing.red.basic.label= 'Pendiente'
+                        .four.wide.field.container-flex-center
+                            input.ui.big.button.basic.item-flex-center(type='button', value='Nuevo', \ 
+                            v-on:click='newTodo(todo)')
+                            input.ui.big.button.teal.item-flex-center(type='button', value='Guardar', \
+                            v-on:click='saveTodo(todo)')
+                    .field
+                        label= 'Descripcion'
+                        textarea(v-model='todo.description')
     
-    .todos.ui.piled.segment
-      h4.ui.header.= 'Pendientes'
-      .ui.relaxed.aligned.animated.divided.list
-        .item(v-for="todo in todos | filterBy false in 'state' | orderBy 'id' -1")
-          img.ui.avatar.image(src='/public/images/ninja-simple.png')
-          .middle.aligned.content
-            .header 
-              {{ todo.title }}
-            span.item-text {{ todo.description }}
-            a.ui.red.small.tag.label= 'Pendiente'
-          .right.floated.content
-            button.ui.large.icon.blue.button(v-on:click='editTodo(todo)')
-              i.write.icon
-            button.ui.large.icon.green.button(v-on:click='doneTodo(todo)')
-              i.checkmark.icon
+        .todos.ui.piled.segment
+            h4.ui.header.= 'Pendientes'
+            .ui.relaxed.aligned.animated.divided.list
+                .item(v-for="todo in todos | filterBy false in 'state' | orderBy 'id' -1")
+                    img.ui.avatar.image(src='/public/images/ninja-simple.png')
+                    .middle.aligned.content
+                        .header 
+                            {{ todo.title }}
+                        span.item-text 
+                            {{ todo.description }}
+                    .ui.left.pointing.red.basic.label= 'Pendiente'
+                    .right.floated.content
+                        button.ui.large.icon.teal.basic.button(v-on:click='editTodo(todo)')
+                            i.write.icon
+                        button.ui.large.icon.green.basic.button(v-on:click='doneTodo(todo)')
+                            i.checkmark.icon
             
-    .todos.ui.piled.segment
-      h4.ui.header.= 'Realizadas'
-      .ui.relaxed.aligned.animated.divided.list
-        .item(v-for="todo in todos | filterBy true in 'state' | orderBy 'id' -1")
-          img.ui.avatar.image(src='/public/images/ninja-simple.png')
-          .middle.aligned.content
-            .header 
-              {{ todo.title }}
-            span.item-text {{ todo.description }}
-            a.ui.green.tag.label= 'Hecho'
-          .right.floated.content
-            button.ui.large.icon.yellow.button(v-on:click="reverseTodo(todo)")
-              i.undo.icon
+        .todos.ui.piled.segment
+            h4.ui.header.= 'Realizadas'
+            .ui.relaxed.aligned.animated.divided.list
+                .item(v-for="todo in todos | filterBy true in 'state' | orderBy 'id' -1")
+                    img.ui.avatar.image(src='/public/images/ninja-simple.png')
+                    .middle.aligned.content
+                        .header 
+                            {{ todo.title }}
+                        span.item-text 
+                            {{ todo.description }}
+                    .ui.left.pointing.green.basic.label= 'Hecho'
+                    .right.floated.content
+                        button.ui.large.icon.olive.basic.button(v-on:click="reverseTodo(todo)")
+                            i.undo.icon
