comment initial welcome message

--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -10,9 +10,10 @@ body
 
   include ../partials/navbar
 
-  .init
-    #container-center.ui.container
-      h1 #{title}
+  // Bienvenido Animation
+  // .init
+  //   #container-center.ui.container
+  //     h1 #{title}
     
   .ui.container.container-body
       block content
