--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -18,7 +18,9 @@ body
   .ui.container.container-body
       block content
       
+
 script(src='//code.jquery.com/jquery-1.12.0.min.js')
 script(src='/semantic/semantic.min.js')
 script(src='/public/vendor/vue/vue.js')
+script(src='https://cdn.jsdelivr.net/vue.validator/2.0.0-beta.2/vue-validator.min.js')
 script(type='text/javascript', src='/public/js/main.js')
