--- a/views_html/layouts/header.html
+++ b/views_html/layouts/header.html
@@ -6,6 +6,10 @@
   <title><%= title %></title>
   <link rel='stylesheet' type='text/css' href='/semantic/semantic.min.css'>
   <link rel='stylesheet' href='/public/css/style.css'>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script type="text/javascript" src="/semantic/semantic.min.js"></script>
+  <script type="text/javascript" src="/public/vendor/vue/vue.js"></script>
+  <script type="text/javascript" src="/public/vendor/vue-validator/vue-validator.min.js"></script>  
 </head>
 <body>
   <%- include('../partials/navbar.html') -%> 
