--- a/views_html/layouts/footer.html
+++ b/views_html/layouts/footer.html
@@ -1,4 +1,8 @@
   <!-- Footers -->
-  <script type="text/javascript" src="/public/js/main.js"></script>  
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script type="text/javascript" src="/semantic/semantic.min.js"></script>
+  <script type="text/javascript" src="/public/vendor/vue/vue.js"></script>
+  <script type="text/javascript" src="/public/vendor/vue-validator/vue-validator.min.js"></script>
+  <script type="text/javascript" src="/public/js/main.js"></script>
 </body>
 </html>
