--- a/views_html/partials/navbar.html
+++ b/views_html/partials/navbar.html
@@ -1,7 +1,7 @@
 <div id="wrapper" class="ui container">
   <div class="ui inverted top fixed menu">
     <div class="header item">
-      <span>M</span>
+      <span>LTRY</span>
     </div>
     <a class="item">Testimonials</a>
     <a class="item">Sign-in</a>
