Migrate to vue components. Add routers and Sign in form.

--- a/views_html/layouts/footer.html
+++ b/views_html/layouts/footer.html
@@ -3,6 +3,11 @@
   <script type="text/javascript" src="/semantic/semantic.min.js"></script>
   <script type="text/javascript" src="/public/vendor/vue/vue.js"></script>
   <script type="text/javascript" src="/public/vendor/vue-validator/vue-validator.min.js"></script>
+  <script type="text/javascript" src="/public/vendor/vue-resource/vue-resource.js"></script>
+  <script type="text/javascript" src="/public/vendor/vue-router/vue-router.js"></script>
+  <script type="text/javascript" src="/public/js/util.js"></script>
+  <script type="text/javascript" src="/public/js/components/todo.js"></script>
+  <script type="text/javascript" src="/public/js/components/sign-in.js"></script>
   <script type="text/javascript" src="/public/js/main.js"></script>
 </body>
 </html>
