--- a/views_html/partials/navbar.html
+++ b/views_html/partials/navbar.html
@@ -3,7 +3,7 @@
     <div class="header item">
       <span>LTRY</span>
     </div>
-    <a class="item">Testimonials</a>
-    <a class="item">Sign-in</a>
+    <!--<a class="item">Testimonials</a>
+    <a class="item">Sign-in</a>-->
   </div>
 </div>
