--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,7 +63,7 @@ div.item {
 }
 
 .container-flex-center {
-  display: flex;
+  display: flex !important;
   justify-content: center;
   align-items: flex-end;
 }
