--- a/views_html/layouts/header.html
+++ b/views_html/layouts/header.html
@@ -7,6 +7,6 @@
   <link rel='stylesheet' type='text/css' href='/semantic/semantic.min.css'>
   <link rel='stylesheet' href='/public/css/style.css'>    
 </head>
-<body>
-  <%- include('../partials/navbar.html') -%> 
+<body id="App">
+  <navbar-component></navbar-component> 
   
