--- a/views_html/partials/navbar.html
+++ b/views_html/partials/navbar.html
@@ -1,9 +1,11 @@
-<div id="wrapper" class="ui container">
-  <div class="ui inverted top fixed menu">
-    <div class="header item">
-      <span>LTRY</span>
+<script type="x/template" id="navbar-template">
+  <div id="navbar" class="ui container">
+    <div class="ui inverted top fixed menu">
+      <div class="header item">
+        <span>LTRY</span>
+      </div>
+      <a class="item" v-link="{ name: 'default' }">Home</a>
+      <a class="item">Sign out</a>
     </div>
-    <!--<a class="item">Testimonials</a>
-    <a class="item">Sign-in</a>-->
   </div>
-</div>
+</script>
