--- a/views_html/partials/sign-in.html
+++ b/views_html/partials/sign-in.html
@@ -1,23 +1,3 @@
 <script type="x/template" id="sign-in-template">
-  <div id="sigin">
-    <div class="ui inverted segment">
-      <form class="ui inverted form">
-        <div class="field">
-          <label>First Name</label>
-          <input type="text" name="first-name" placeholder="First Name">
-        </div>
-        <div class="field">
-          <label>Last Name</label>
-          <input type="text" name="last-name" placeholder="Last Name">
-        </div>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>I agree to the Terms and Conditions</label>
-          </div>
-        </div>
-        <button class="ui button" type="submit">Submit</button>
-      </form>
-    </div>
-  </div> 
+  <%- include('./auth/sign-in.html') -%>
 </script>
