--- a/views_html/layouts/footer.html
+++ b/views_html/layouts/footer.html
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="/public/vendor/vue-resource/vue-resource.js"></script>
   <script type="text/javascript" src="/public/vendor/vue-router/vue-router.js"></script>
   <script type="text/javascript" src="/public/js/util.js"></script>
+  <script type="text/javascript" src="/public/js/controllers/auth.js"></script>
   <script type="text/javascript" src="/public/js/components/todo.js"></script>
   <script type="text/javascript" src="/public/js/components/auth.js"></script>
   <script type="text/javascript" src="/public/js/components/navbar.js"></script>
