--- a/views_html/partials/todo/list.html
+++ b/views_html/partials/todo/list.html
@@ -1,15 +1,16 @@
 <div class="ui relaxed aligned animated divided list">
   <div v-for="todo in $parent.todos | filterBy state in 'state' | orderBy 'id' -1" 
         v-on:click="" 
-        class="item">
+        class="item"
+        track-by="$index">
       <!-- Avatar -->
     <img src="/public/images/ninja-simple.png" class="ui avatar image"/>
       <!-- /Avatar -->
     <div class="middle aligned content">
       <div class="header">
         {{ todo.title }}
-      </div><span class="item-text">
-        {{ todo.description }}</span>
+      </div>
+      <span class="item-text">{{ todo.description }}</span>
     </div>
     <div class="ui left pointing red basic label" v-show="!state">Pendiente</div>
     <div class="ui left pointing green basic label" v-show="state">Hecho</div>
