remove console logs

--- a/views_html/partials/todo/list.html
+++ b/views_html/partials/todo/list.html
@@ -15,7 +15,7 @@
     <div class="ui left pointing red basic label" v-show="!state">Pendiente</div>
     <div class="ui left pointing green basic label" v-show="state">Hecho</div>
     <div class="right floated content">
-      <button v-on:click="removeTodo(todo)" class="ui large icon red basic button" v-show="!state"><i class="minus circle icon"></i></button>
+      <button v-on:click="removeTodo(todo)" class="ui large icon red basic button"><i class="minus circle icon"></i></button>
       <button v-on:click="editTodo(todo)" class="ui large icon teal basic button" v-show="!state"><i class="write icon"></i></button>
       <button v-on:click="doneTodo(todo)" class="ui large icon green basic button" v-show="!state"><i class="checkmark icon"></i></button>
       <button v-on:click="reverseTodo(todo)" class="ui large icon olive basic button" v-show="state"><i class="undo icon"></i></button>
