--- a/views_html/partials/todo/index.html
+++ b/views_html/partials/todo/index.html
@@ -1,4 +1,4 @@
-<button class="fluid ui button" v-on:click="openModal()">Nuevo Tarea</button>
+<button class="fluid ui blue button" v-on:click="openModal()">Nuevo Tarea</button>
 <div class="ui pointing secondary menu">
   <a class="item active" data-tab="first">Pendientes</a>
   <a class="item" data-tab="second">Hechas</a>
