add fb app script

--- a/views_html/layouts/header.html
+++ b/views_html/layouts/header.html
@@ -8,5 +8,22 @@
   <link rel='stylesheet' href='/public/css/style.css'>    
 </head>
 <body id="App">
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '1600736040243818',
+        xfbml      : true,
+        version    : 'v2.6'
+      });
+    };
+
+    (function(d, s, id){
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) {return;}
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
   <navbar-component></navbar-component> 
   
