Change autoRegister flag

--- a/views_html/layouts/header.html
+++ b/views_html/layouts/header.html
@@ -12,7 +12,7 @@
     var OneSignal = window.OneSignal || [];
     OneSignal.push(["init", {
       appId: "784307cc-9b49-4b1c-9797-b369841d2ac3",
-      autoRegister: false,
+      autoRegister: true,
       notifyButton: {
         enable: true /* Set to false to hide */
       }
