Set tag for testing

--- a/views_html/layouts/header.html
+++ b/views_html/layouts/header.html
@@ -17,6 +17,12 @@
         enable: true /* Set to false to hide */
       }
     }]);
+  
+    OneSignal.push(function() {
+      /* These examples are all valid */
+      OneSignal.sendTag("SF_user_ID", "9740");
+    });
+
   </script>
 </head>
 <body id="App">
